--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,9 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 monitor_speed = 115200
-lib_deps =
-	Adafruit MAX31855 library
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+monitor_speed = 115200
